--- a/templates/base.html
+++ b/templates/base.html
@@ -145,6 +145,10 @@
               </li>
             {% endif %}
               <li><a href="{{ SITEURL }}/{{ ARCHIVES_URL | default('archives.html') }}"><i class="fa fa-th-list"></i><span class="icon-label">Archives</span></a></li>
+            {% if DISPLAY_IMPRESSUM_ON_MENU %}
+              <li{% if page and page.url == (IMPRESSUM_URL | default('pages/impressum.html')) %} class="active"{% endif %}>
+              <a href="{{ SITEURL }}/{{ IMPRESSUM_URL | default('pages/impressum.html') }}">Impressum</a></li>
+            {% endif %}
             </ul>
         </div>
         <!-- /.navbar-collapse -->
