--- a/templates/base.html
+++ b/templates/base.html
@@ -122,7 +122,7 @@
                     <li><a href="{{ link }}">{{ title }}</a></li>
                 {% endfor %}
                 {% if DISPLAY_PAGES_ON_MENU %}
-                    {% for p in PAGES %}
+                    {% for p in pages %}
                          <li{% if p == page %} class="active"{% endif %}><a href="{{ SITEURL }}/{{ p.url }}">
                              {{ p.menulabel|default(p.title) }}
                           </a></li>
@@ -202,6 +202,7 @@
 {% endif %}
 {% include 'includes/github-js.html' %}
 {% include 'includes/disqus_script.html' %}
+{% include 'includes/cookieconsent.html' %}
 {% include 'includes/ga.html' %}
 {% include 'includes/piwik.html' %}
 
